Updated styling to match Du Bois Style Guide
(Arjun's version, revert to before this to restore original styling)

--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@ Assistance taken from ChatGPT to refine and debug code-->
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<title>Project DuBois</title>
+	<!--Public Sans font-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500&display=swap" rel="stylesheet">
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- Custom styling -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-light">
-		<div class="container">
-			<center><h3>Correlations between health expectancy and family income in the US (1980-2018)<br></h3></center>
-			<center>Data Source: cdc.gov & census.gov</center>
+	<nav class="navbar">
+		<div class="container header">
+			<h3 class="title">HEALTH AND INCOME ACROSS RACE.<br></h3>
+			<p class="subtitle">Correlations between health expectancy and family income in the US, 1980-2018.<br>Data is sourced from the CDC and the US Census.</h3>
 		</div>
 	</nav>
 
