Updated fonts and title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Assistance taken from ChatGPT to refine and debug code-->
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="">
-	<title>Project DuBois</title>
+	<title>Health and Income Across Race</title>
 	<!--Public Sans font-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
